--- a/Question-1/style.css
+++ b/Question-1/style.css
@@ -1,9 +1,16 @@
-body{
-  background-color: aqua;
+body {
+  background-color: rgba(10, 10, 10, 0.787);
+  color: white;
 }
-.container{
-    text-align: center;
+h1,
+h2 {
+  text-align: center;
 }
-p{
-    font-size: 25px;
+.container {
+  margin: 25px;
+  padding: 20px;
+  background-color: black;
+}
+p {
+  font-size: 25px;
 }
