--- a/Question-1/style.css
+++ b/Question-1/style.css
@@ -14,10 +14,19 @@ h2 {
 p {
   font-size: 25px;
 }
-button{
+a{
+  text-decoration: none;
+  color: white;
   font-size: 30px;
-  padding:4px;
+  border: 2px solid white;
+  margin:20px;
+  padding: 6px;
+  border-radius: 10px;
+}
+button{
+     background-color:black;
+     color:white;
 }
 button:hover{
-    cursor: pointer;
+  cursor: pointer;
 }
